--- a/style/style.css
+++ b/style/style.css
@@ -191,7 +191,7 @@ footer > .f_container > .f_left p {
   color: #fff;
   font-size: 16px;
   font-weight: 400;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
   padding: 20px 0;
 }
 footer > .f_container > .f_left img {
