--- a/style/style.css
+++ b/style/style.css
@@ -38,6 +38,7 @@ body > header {
   background: url('../images/banner/banner3.png');
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: 100%;
 }
 
 #header_container {
