--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@ h2 {
 button {
   border-radius: 5px;
   background: #fff;
-  padding: 20px;
+  padding: 15px 20px;
   border: none;
   color: #005fac;
   font-family: Work Sans;
@@ -38,11 +38,11 @@ body > header {
   background: url('../images/banner/banner3.png');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 100%;
+  background-position: 80%;
 }
 
 #header_container {
-  width: 75%;
+  width: 71%;
   height: 100%;
   margin: auto;
   display: flex;
@@ -51,8 +51,7 @@ body > header {
   text-align: right;
 }
 #header_container > div {
-  width: 45%;
-  padding-left: 10px;
+  width: 50%;
 }
 #header_container > div > h1 {
   color: #fff;
@@ -193,7 +192,7 @@ footer > .f_container > .f_left p {
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
-  padding: 20px 0;
+  padding: 20px 0 0px;
 }
 footer > .f_container > .f_left img {
   height: 46px;
@@ -212,7 +211,7 @@ footer > .f_container > .f_right input {
   border-radius: 8px;
   width: 100%;
   border: 1px solid #fff;
-  padding: 20px;
+  padding: 13px 20px;
   margin: 31px 0 15px;
   color: #f3f3f3;
   background-color: #151414;
